syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package com.zup;

service PixRegistraService {
  rpc cadastraChave (PixRegistraRequest) returns (PixRegistraResponse) {}
}
enum TipoChave{
  DEFAULT = 0;
  EMAIL = 1;
  TELEFONE = 2;
  CPF = 3;
  ALEATORIA = 4;

}

enum TipoConta{
  DEFAULTCONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
message PixRegistraRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string  valorChave = 3;
  TipoConta tipoConta = 4;
}

message PixRegistraResponse {
  string pixId = 1;
  string clientId =2;
}